# 8086Emulator_

./: CMakeLists.txt  README.md  main.cpp  project.md
MobileApp/: README.md  pubspec.yaml
MobileApp/android/app/: build.gradle
MobileApp/android/app/src/profile/: AndroidManifest.xml
MobileApp/lib/: ders_secim.dart
fileIo/: fileIo.h
learn_sembly/: pubspec.yaml
learn_sembly/android/app/: CMakeLists.txt  build.gradle
learn_sembly/android/app/src/main/: AndroidManifest.xml
learn_sembly/android/app/src/main/kotlin/com/example/learn_sembly/: MainActivity.kt
learn_sembly/ios/Runner/: Info.plist
learn_sembly/ios/Runner.xcodeproj/: project.pbxproj
learn_sembly/lib/: ders_1.dart  ders_2.dart  ders_3.dart  ffi_bridge.dart  main.dart  text_editor.dart
learn_sembly/src/fileIo/: fileIo.cpp
learn_sembly/src/instructions/: Instructions.cpp  Instructions.h
learn_sembly/src/main_cpu/: main_cpu.h
learn_sembly/test/: widget_test.dart
learn_sembly/web/: index.html  manifest.json
lexicalAnalysis/: lexicalAnalysisParser.cpp  lexicalAnalysisParser.h
main_cpu/: main_cpu.cpp  main_cpu.h
main_memory/: main_memory.cpp  main_memory.h
registers/: registers.cpp  registers.h
